lustre/lfsck/lfsck_engine.c
@@ -1754,9 +1754,6 @@ cleanup:
 	}
 	spin_unlock(&lad->lad_lock);
 
-	LASSERTF(lad->lad_prefetched == 0, "unmatched prefeteched objs %d\n",
-		 lad->lad_prefetched);
-
 	memset(lr, 0, sizeof(*lr));
 	if (rc > 0) {
 		lr->lr_event = LE_PHASE2_DONE;
